--- a/Octoprint_Smart_Pow/octoprint_smart_pow/templates/smart_pow_tab.jinja2
+++ b/Octoprint_Smart_Pow/octoprint_smart_pow/templates/smart_pow_tab.jinja2
@@ -3,6 +3,9 @@
 {# This id doesn't matter, it's created and inserted invisibly by octoprint behind the scenes #}
 <span class="label">Power Sate is: </span>
 <span class="label" data-bind="text: power_state"></span>
+{# does this need paranthesis? #}
+<button type="button" class="btn btn-primary" data-bind="click: turn_on">Turn on</button>
+<button type="button" class="btn btn-warning" data-bind="click: turn_off">Turn off</button>
 {# <input type="text" class="input-xxlarge" data-bind="value: settings.settings.plugins.smart_pow.power_plug_state"> #}
 
 {# <iframe data-bind="attr: {src: currentUrl}" style="width: 100%; height: 600px; border: 1px solid #808080"></iframe> #}
