Created settings template

--- a/octoprint_smart_pow/templates/smart_pow_tab.jinja2
+++ b/octoprint_smart_pow/templates/smart_pow_tab.jinja2
@@ -1,6 +1,7 @@
-    {# <input type="text" class="input-xxlarge" data-bind="value: newUrl"> #}
-    {# <button class="btn btn-primary" data-bind="click: goToUrl">{{ _('Go') }}</button> #}
+{# <input type="text" class="input-xxlarge" data-bind="value: newUrl"> #}
+{# <button class="btn btn-primary" data-bind="click: goToUrl">{{ _('Go') }}</button> #}
 {# This id doesn't matter, it's created and inserted invisibly by octoprint behind the scenes #}
+<h3>Power</h3>
 <span class="label">Power Sate is: </span>
 <span class="label" data-bind="text: power_state"></span>
 {# does this need paranthesis? #}
